Issue #1834758 by natted, PlayfulWolf, frankbaele: css to ensure admin_menu module toolbar is visible.

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,20 @@ div#admin-toolbar {
   z-index: 500;
 }
 
+/* Admin_menu fix */
+#admin-menu {
+  z-index: 1100;
+  position: fixed; 
+}
+
+body.admin-menu .navbar-fixed-top {
+  top: 30px; 
+}
+
+#admin-menu .dropdown li {
+  line-height: normal;
+} 
+
 /* System base fix */
 .container-inline div, .container-inline label {
   display: block;
